CREATE SCHEMA "production";

CREATE SCHEMA "sales";

CREATE TABLE "production"."categories" (
  "category_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "category_name" varchar NOT NULL
);

CREATE TABLE "production"."brands" (
  "brand_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_name" varchar NOT NULL
);

CREATE TABLE "production"."products" (
  "product_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_name" varchar NOT NULL,
  "brand_id" integer NOT NULL,
  "category_id" integer NOT NULL,
  "model_year" smallint NOT NULL,
  "list_price" decimal(10,2) NOT NULL
);

CREATE TABLE "production"."stocks" (
  "store_id" integer,
  "product_id" integer,
  "quantity" integer,
  PRIMARY KEY ("store_id", "product_id")
);

CREATE TABLE "sales"."customers" (
  "customer_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "phone" varchar,
  "email" varchar NOT NULL,
  "street" varchar,
  "city" varchar,
  "state" varchar,
  "zip_code" varchar
);

CREATE TABLE "sales"."stores" (
  "store_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "store_name" varchar NOT NULL,
  "phone" varchar,
  "email" varchar,
  "street" varchar,
  "city" varchar,
  "state" varchar,
  "zip_code" varchar
);

CREATE TABLE "sales"."staffs" (
  "staff_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "phone" varchar,
  "active" boolean NOT NULL,
  "store_id" integer NOT NULL,
  "manager_id" integer
);

CREATE TABLE "sales"."orders" (
  "order_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "customer_id" integer,
  "order_status" smallint NOT NULL,
  "order_date" date NOT NULL,
  "required_date" date NOT NULL,
  "shipped_date" date,
  "store_id" integer NOT NULL,
  "staff_id" integer NOT NULL
);

CREATE TABLE "sales"."order_items" (
  "order_id" integer,
  "item_id" integer,
  "product_id" integer NOT NULL,
  "quantity" integer NOT NULL,
  "list_price" decimal(10,2) NOT NULL,
  "discount" decimal(4,2) NOT NULL DEFAULT 0,
  PRIMARY KEY ("order_id", "item_id")
);

COMMENT ON COLUMN "sales"."orders"."order_status" IS '1=Pending, 2=Processing, etc.';

ALTER TABLE "production"."products" ADD FOREIGN KEY ("category_id") REFERENCES "production"."categories" ("category_id");

ALTER TABLE "production"."products" ADD FOREIGN KEY ("brand_id") REFERENCES "production"."brands" ("brand_id");

ALTER TABLE "sales"."orders" ADD FOREIGN KEY ("customer_id") REFERENCES "sales"."customers" ("customer_id");

ALTER TABLE "sales"."orders" ADD FOREIGN KEY ("store_id") REFERENCES "sales"."stores" ("store_id");

ALTER TABLE "sales"."orders" ADD FOREIGN KEY ("staff_id") REFERENCES "sales"."staffs" ("staff_id");

ALTER TABLE "sales"."staffs" ADD FOREIGN KEY ("store_id") REFERENCES "sales"."stores" ("store_id");

ALTER TABLE "sales"."staffs" ADD FOREIGN KEY ("staff_id") REFERENCES "sales"."staffs" ("manager_id");

ALTER TABLE "sales"."order_items" ADD FOREIGN KEY ("order_id") REFERENCES "sales"."orders" ("order_id");

ALTER TABLE "sales"."order_items" ADD FOREIGN KEY ("product_id") REFERENCES "production"."products" ("product_id");

ALTER TABLE "production"."stocks" ADD FOREIGN KEY ("store_id") REFERENCES "sales"."stores" ("store_id");

ALTER TABLE "production"."stocks" ADD FOREIGN KEY ("product_id") REFERENCES "production"."products" ("product_id");
